proxy-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxyservice
spec:
  selector:
    app: proxyservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3001
